2001-08-05  Johan Dahlin  <zilch.am@home.se>

	* src/ui.c (devhelp_create_ui): gtk_clist_set_column_with &
	gtk_clist_set_selection_mode added, this fixes click on link and
	ctree will go empty bug.

2001-08-05  Mikael Hallendal  <micke@codefactory.se>

	* src/ui.c: just some style cleanups.

	* src/bookmark-manager.c: fixed to work fine with Document/anchor
	way of doing it.

	* src/book-node.h: include libgnomevfs/gnome-vfs.h

2001-08-04  Johan Dahlin  <zilch.am@home.se>

	* misc/devhelp.vim: Added. Thanks goes to Gert.

2001-08-02  Johan Dahlin  <zilch.am@home.se>

	* configure.in (DEVHELP_VERSION): Bumped version to 0.1.1

2001-08-02  Mikael Hallendal  <micke@codefactory.se>

	* src/bookshelf.c (bookshelf_write_xml): the path should be freed.

2001-08-01  Johan Dahlin  <zilch.am@home.se>

	* ui/devhelp.glade: Remove clist and ctree, but keep scrolled windows.

	* src/ui.c (devhelp_insert_book_node): Added visible check.
	(devhelp_create_ui): Create ctree and clist here instead of in glade.

	* src/bookshelf.h: Fix bookshelf_write_xml.

	* src/bookshelf.c: Added visible here too.
	(bookshelf_write_xml): Remove root from arguments, and add visible check.
	(bookshelf_read_xml): Dito.

	* src/books-dialog.c (books_button_show_clicked_cb): Updated
	(books_button_hide_clicked_cb): Dito.
	(update_clist): Dito.

	* src/book.h: added book_set/is_visible here too.

	* src/book.c: Added visible.
	(book_set_visible): New function.
	(book_is_visible): New function.

	* src/bookshelf.c (bookshelf_write_xml): Use book_get_path to get
	the path.

2001-08-01  Mikael Hallendal  <micke@codefactory.se>

	* src/books-dialog.c 
	(books_button_edit_clicked_cb): free the path.
	(info_button_ok_clicked_cb): free the path.

	* src/book.c (book_get_path): don't return const gchar since it
	has to be freed.

2001-08-01  Johan Dahlin  <zilch.am@home.se>

	* src/ui.c (menu_help_about_activate_cb): Make the copyright
	string translatable.
